--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    background-color: #221C1B;
+}
+
+.banner {
+    width: 100%;
+    height: 140px;
+}
+
+.card {
+    @apply rounded-md py-2 px-3;
+    min-height: 200px;
+}
