--- a/css/styles.css
+++ b/css/styles.css
@@ -2,16 +2,57 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face{
+    font-family: montserrat;
+    src: url(Montserrat-Black.ttf);
+}
+
 body {
     background-color: #221C1B;
 }
 
 .banner {
     width: 100%;
-    height: 140px;
+    height: 390px;
 }
 
 .card {
-    @apply rounded-md py-2 px-3;
-    min-height: 200px;
+    @apply rounded-md py-4 px-10;
+    height: 100%;
+    width: 70%;
+    padding: 3%;
+    margin-top: 30px;
+}
+
+.content{
+    display: inline-block;
+    top: 4vh;
+    font-size: 3vmin;
+    font-family: montserrat;
+}
+.chev{
+    display: inline-block;
+    position: relative;
+    bottom: 8px;
+}
+.fullbutton{
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+.bigDuck{
+    width: 50%;
+    height: 50%;
+    margin:auto;
+}
+.duckedText{
+    font-size: 70px;
+    font: montserrat;
+}
+.keepDuck{
+    color: white;
+    font-family: montserrat;
+    font-size: 4vh;
+    margin-bottom: 10vh;
+    display: inline-block;
 }
