--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ body {
 .banner {
   width: 100%;
   height: 390px;
+  z-index: -1;
 }
 
 .card {
@@ -85,15 +86,20 @@ body {
   font-size: 4vh;
   margin-bottom: 10vh;
   display: inline-block;
+  z-index: 1;
 }
 .input {
   margin-top: 40px;
-  width: 500px;
-  height: 100px;
+  width: 100%;
+  height: 40px;
 }
 .button {
   margin-top: 20px;
   background-color: #e4b81a;
   width: 20vw;
   height: 6vh;
+}
+
+.ugly {
+  width: 80vw;
 }
